--- a/index.html
+++ b/index.html
@@ -45,17 +45,9 @@
         </div>
     </div>
 
-
-
-
-
-
-
-
-
-
-
     <script src="/Example-03/bootstrap-5.1.3-dist/js/bootstrap.bundle.min.js"></script>
+    
+<!--  Script Files should be inside body    -->
 
 </body>
 
